loopfor.LoopFor.scala.error
Compilation error:
LoopFor:13: error: not found: value nbr
if (nbr==nbp) {
    ^